--- a/requirements.txt
+++ b/requirements.txt
@@ -104,7 +104,7 @@ multidict==6.1.0
 multitasking==0.0.11
 networkx==3.4.2
 numba==0.61.0
-numpy==2.2.2
+numpy==2.1.3
 oauthlib==3.2.2
 onnxruntime==1.20.1
 openai==1.59.8
@@ -163,7 +163,7 @@ python-dotenv==1.0.1
 python-multipart==0.0.20
 pytz==2024.2
 pyvis==0.3.2
-
+pywin32==308
 PyYAML==6.0.2
 referencing==0.36.1
 regex==2024.11.6
